tests/snapshots/opendbc/generator/nissan/nissan_leaf_2018.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 42
    name: SEATBELT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: SEATBELT_DRIVER_LATCHED
        multiplexer_indicator: Plain
        start_bit: 27
        size: 1
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: SEATBELT_DRIVER_UNLATCHED
        multiplexer_indicator: Plain
        start_bit: 26
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: unknown2
        multiplexer_indicator: Plain
        start_bit: 31
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: unknown3
        multiplexer_indicator: Plain
        start_bit: 24
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: unknown1
        multiplexer_indicator: Plain
        start_bit: 7
        size: 24
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 16777215
        unit: ""
        receivers:
          - XXX
      - name: unknown4
        multiplexer_indicator: Plain
        start_bit: 39
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 65535
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 460
    name: BRAKE_PEDAL
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: BRAKE_PEDAL
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 256
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 569
    name: CRUISE_THROTTLE
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: GAS_PEDAL_INVERTED
        multiplexer_indicator: Plain
        start_bit: 15
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: GAS_PEDAL
        multiplexer_indicator: Plain
        start_bit: 7
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: CRUISE_AVAILABLE
        multiplexer_indicator: Plain
        start_bit: 17
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: unsure1
        multiplexer_indicator: Plain
        start_bit: 23
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 63
        unit: ""
        receivers:
          - XXX
      - name: unsure2
        multiplexer_indicator: Plain
        start_bit: 16
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: unsure3
        multiplexer_indicator: Plain
        start_bit: 31
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: NO_BUTTON_PRESSED
        multiplexer_indicator: Plain
        start_bit: 29
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: RES_BUTTON
        multiplexer_indicator: Plain
        start_bit: 28
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: SET_BUTTON
        multiplexer_indicator: Plain
        start_bit: 27
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: FOLLOW_DISTANCE_BUTTON
        multiplexer_indicator: Plain
        start_bit: 26
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CANCEL_BUTTON
        multiplexer_indicator: Plain
        start_bit: 25
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: PROPILOT_BUTTON
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: USER_BRAKE_PRESSED
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 32
        size: 2
        byte_order: LittleEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: unsure5
        multiplexer_indicator: Plain
        start_bit: 47
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: unsure6
        multiplexer_indicator: Plain
        start_bit: 55
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: unsure7
        multiplexer_indicator: Plain
        start_bit: 63
        size: 8
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 640
    name: CANCEL_MSG
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: CANCEL_SEATBELT
        multiplexer_indicator: Plain
        start_bit: 1
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: NEW_SIGNAL_1
        multiplexer_indicator: Plain
        start_bit: 7
        size: 6
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 63
        unit: ""
        receivers:
          - XXX
      - name: NEW_SIGNAL_2
        multiplexer_indicator: Plain
        start_bit: 0
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: NEW_SIGNAL_3
        multiplexer_indicator: Plain
        start_bit: 15
        size: 56
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 72057594037927940
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 644
    name: WHEEL_SPEEDS_FRONT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: WHEEL_SPEED_FR
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.005
        offset: 0
        min: 0
        max: 65535
        unit: KPH
        receivers:
          - XXX
      - name: WHEEL_SPEED_FL
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.005
        offset: 0
        min: 0
        max: 65535
        unit: KPH
        receivers:
          - XXX
  - id:
      Standard: 852
    name: ESP
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: ESP_DISABLED
        multiplexer_indicator: Plain
        start_bit: 38
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 853
    name: HUD_SETTINGS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: SPEED_MPH
        multiplexer_indicator: Plain
        start_bit: 37
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 856
    name: LIGHTS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: LEFT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 17
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: RIGHT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 18
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1057
    name: GEARBOX
    size: 3
    transmitter:
      NodeName: XXX
    signals:
      - name: GEAR_SHIFTER
        multiplexer_indicator: Plain
        start_bit: 5
        size: 3
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1549
    name: DOORS_LIGHTS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DOOR_OPEN_FL
        multiplexer_indicator: Plain
        start_bit: 3
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_FR
        multiplexer_indicator: Plain
        start_bit: 4
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_RL
        multiplexer_indicator: Plain
        start_bit: 5
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_RR
        multiplexer_indicator: Plain
        start_bit: 6
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _nissan_common.dbc
value_descriptions:
  - Signal:
      message_id:
        Standard: 1057
      name: GEAR_SHIFTER
      value_descriptions:
        - id: 7
          description: B
        - id: 4
          description: D
        - id: 3
          description: N
        - id: 2
          description: R
        - id: 1
          description: P
