tests/snapshots/opendbc/generator/nissan/nissan_x_trail_2017.snap
---
source: tests/snapshots.rs
---
version: ""
bit_timing: ~
messages:
  - id:
      Standard: 348
    name: GAS_PEDAL
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: GAS_PEDAL_RAW
        multiplexer_indicator: Plain
        start_bit: 26
        size: 11
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 2047
        unit: ""
        receivers:
          - XXX
      - name: GAS_PEDAL
        multiplexer_indicator: Plain
        start_bit: 47
        size: 10
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1023
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 438
    name: PRO_PILOT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 55
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: SET_ME_X03
        multiplexer_indicator: Plain
        start_bit: 33
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 15
        unit: ""
        receivers:
          - XXX
      - name: CRUISE_ACTIVATED
        multiplexer_indicator: Plain
        start_bit: 38
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: CRUISE_ON
        multiplexer_indicator: Plain
        start_bit: 36
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: STEER_STATUS
        multiplexer_indicator: Plain
        start_bit: 51
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 523
    name: CRUISE_THROTTLE
    size: 6
    transmitter:
      NodeName: XXX
    signals:
      - name: PROPILOT_BUTTON
        multiplexer_indicator: Plain
        start_bit: 8
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: CANCEL_BUTTON
        multiplexer_indicator: Plain
        start_bit: 9
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: GAS_PEDAL_INVERTED
        multiplexer_indicator: Plain
        start_bit: 37
        size: 10
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1023
        unit: ""
        receivers:
          - XXX
      - name: SET_BUTTON
        multiplexer_indicator: Plain
        start_bit: 11
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: RES_BUTTON
        multiplexer_indicator: Plain
        start_bit: 12
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: FOLLOW_DISTANCE_BUTTON
        multiplexer_indicator: Plain
        start_bit: 10
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: NO_BUTTON_PRESSED
        multiplexer_indicator: Plain
        start_bit: 13
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: GAS_PEDAL
        multiplexer_indicator: Plain
        start_bit: 31
        size: 10
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: USER_BRAKE_PRESSED
        multiplexer_indicator: Plain
        start_bit: 21
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: USER_BRAKE_PRESSED_INVERTED
        multiplexer_indicator: Plain
        start_bit: 22
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: NEW_SIGNAL_2
        multiplexer_indicator: Plain
        start_bit: 23
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: GAS_PRESSED_INVERTED
        multiplexer_indicator: Plain
        start_bit: 20
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
      - name: COUNTER
        multiplexer_indicator: Plain
        start_bit: 17
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: unsure1
        multiplexer_indicator: Plain
        start_bit: 7
        size: 10
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1023
        unit: ""
        receivers:
          - XXX
      - name: unsure2
        multiplexer_indicator: Plain
        start_bit: 43
        size: 4
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: unsure3
        multiplexer_indicator: Plain
        start_bit: 19
        size: 2
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 665
    name: ESP
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: ESP_DISABLED
        multiplexer_indicator: Plain
        start_bit: 24
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 666
    name: WHEEL_SPEEDS_FRONT
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: WHEEL_SPEED_FR
        multiplexer_indicator: Plain
        start_bit: 7
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.005
        offset: 0
        min: 0
        max: 65535
        unit: KPH
        receivers:
          - XXX
      - name: WHEEL_SPEED_FL
        multiplexer_indicator: Plain
        start_bit: 23
        size: 16
        byte_order: BigEndian
        value_type: Unsigned
        factor: 0.005
        offset: 0
        min: 0
        max: 65535
        unit: KPH
        receivers:
          - XXX
  - id:
      Standard: 768
    name: STEER_TORQUE_SENSOR2
    size: 2
    transmitter:
      NodeName: XXX
    signals:
      - name: STEERING_TORQUE
        multiplexer_indicator: Plain
        start_bit: 6
        size: 7
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 127
        unit: ""
        receivers:
          - XXX
      - name: STEERING_PRESSED
        multiplexer_indicator: Plain
        start_bit: 15
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: -1
        offset: 1
        min: 0
        max: 7
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1055
    name: GEARBOX
    size: 2
    transmitter:
      NodeName: XXX
    signals:
      - name: SPORTS_MODE
        multiplexer_indicator: Plain
        start_bit: 13
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: GEAR_SHIFTER
        multiplexer_indicator: Plain
        start_bit: 5
        size: 3
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 255
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1107
    name: LIGHTS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: RIGHT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 12
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: LEFT_BLINKER
        multiplexer_indicator: Plain
        start_bit: 11
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: HEADLIGHTS
        multiplexer_indicator: Plain
        start_bit: 5
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1108
    name: DOORS_LIGHTS
    size: 8
    transmitter:
      NodeName: XXX
    signals:
      - name: DOOR_CLOSED_RR
        multiplexer_indicator: Plain
        start_bit: 40
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_RR
        multiplexer_indicator: Plain
        start_bit: 41
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_CLOSED_RL
        multiplexer_indicator: Plain
        start_bit: 42
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_RL
        multiplexer_indicator: Plain
        start_bit: 43
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_CLOSED_FL
        multiplexer_indicator: Plain
        start_bit: 44
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_FL
        multiplexer_indicator: Plain
        start_bit: 45
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: DOOR_CLOSED_FR
        multiplexer_indicator: Plain
        start_bit: 46
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: DOOR_OPEN_FR
        multiplexer_indicator: Plain
        start_bit: 47
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 3
        unit: ""
        receivers:
          - XXX
      - name: BOOT_OPEN
        multiplexer_indicator: Plain
        start_bit: 55
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: BRAKE_LIGHT
        multiplexer_indicator: Plain
        start_bit: 54
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: USER_BRAKE_PRESSED
        multiplexer_indicator: Plain
        start_bit: 23
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
  - id:
      Standard: 1273
    name: HUD
    size: 7
    transmitter:
      NodeName: XXX
    signals:
      - name: SEATBELT_DRIVER_LATCHED
        multiplexer_indicator: Plain
        start_bit: 25
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
      - name: SPEED_MPH
        multiplexer_indicator: Plain
        start_bit: 5
        size: 1
        byte_order: BigEndian
        value_type: Unsigned
        factor: 1
        offset: 0
        min: 0
        max: 1
        unit: ""
        receivers:
          - XXX
comments:
  - Plain:
      comment: IMPORT _nissan_common.dbc
value_descriptions:
  - Signal:
      message_id:
        Standard: 1055
      name: GEAR_SHIFTER
      value_descriptions:
        - id: 6
          description: L
        - id: 4
          description: D
        - id: 3
          description: N
        - id: 2
          description: R
        - id: 1
          description: P
